--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="jumbotron text-white jumbotron-image shadow" style="background-image: url(https://img.freepik.com/premium-vector/blue-seamless-pattern-with-bacteria-germs_74102-664.jpg?w=2000)">
     <div class="container">
         <div class="row">
-            <div class="col-md-12 jumbotron text-center" > 
+            <div class="col-ms-12 jumbotron text-center" > 
                 <div class="jumbotron text-center">  
                 <h1>Belly Button Biodiversity Dashboard</h1>
                 <br>
@@ -56,8 +56,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="charts.js"></script>
-    <!--<script src="samples.json"></script>
+  
 
-</body>
-
+    </body>
 </html>
