--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <!-- <link rel="stylesheet" src="css/style.css"> -->
     <style>
-        body {font-family: Trebuchet MS, opacity=0.5}
+        
+        body { font-family: 'Helvetica Neue', sans-serif;}
+        .header {font-family: 'Helvetica Neue'; color:purple}
+
         </style>
     </head>
 
@@ -17,10 +20,10 @@
     <div class="container">
         <div class="row">
             <div class="col-ms-12 jumbotron text-center" > 
-                <div class="jumbotron text-center">  
+                <div class="jumbotron text-center header">  
                 <h1>Belly Button Biodiversity Dashboard</h1>
                 <br>
-                <p>Use the interactive charts below to explore the dataset</p>
+                <p><h2>Use the interactive charts below to explore the dataset</h2></p>
                 </div>
             </div>
         </div>
