--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <!-- <link rel="stylesheet" src="css/style.css"> -->
     <style>
         
-        body {font-family: 'Helvetica Neue', sans-serif;}
-        .header {font-family: 'abeezee'; color:purple}
+        body {font-family: 'Trebuchet MS', sans-serif}
+        .header {font-family: 'abeezee'; color: #023020}
     
         </style>
     </head>
