--- a/index.html
+++ b/index.html
@@ -22,22 +22,25 @@
         <div class="row">
             <div class="col-ms-12 jumbotron text-center" > 
                 <div class="jumbotron text-center header">  
-                <h1>Belly Button Biodiversity Dashboard</h1>
+                <h1>From Bacteria to Beef:</h1>
                 <br>
-                <p><h2>Use the interactive charts below to explore the dataset</h2></p>
+                <p><h2>A study of the bacteria found in human navels.</h2><hr>
+                <br><h3>Belly Button Biodiversity Dashboard<br>Use the interactive charts below to explore the data.</h3>
+                <h3><br>
+                 </h3></p>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-md-2">
                 <div class="well">
-                    <h5>Test Subject ID No.:</h5>
+                    <h4>Test Subject ID No.:</h4>
                     <!-- <select id="selDataset"></select> -->
                     <select id="selDataset" onchange="optionChanged(this.value)"></select>
                 </div>
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Demographic Info</h3>
+                        <h4 class="panel-title">Demographic Info</h4>
                     </div>
                     <div id="sample-metadata" class="panel-body"></div>
                 </div>
